# mnemosyne

./: .editorconfig  .gitignore  .gitmessage  .test-hook-trigger  AGENT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  CONTEXT_LOADING.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  DSPy_Integration_Test_Results.md  E2E_TEST_REPORT.md  EVALUATION.md  EVENT_BROADCASTING_STATUS.md  HOOKS_TESTING.md  INSTALL.md  LICENSE  LLM_TESTING.md  MANUAL_TESTING.md  MCP_SERVER.md  MERGE_READINESS_SUMMARY.md  Makefile  ORCHESTRATION.md  PHASE_1_2_PLAN.md  PHASE_3_SPEC.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  REFACTORING_FINDINGS.md  REFACTORING_GUIDE.md  REFACTORING_RECOMMENDATIONS.md  REMAINING_TEST_FAILURES.md  REMEDIATION_COMPLETE.md  REVIEW_COMPLETE.md  ROADMAP.md  SAFETY_AUDIT.md  SECRETS_MANAGEMENT.md  (+25 more)
.beads/: issues.jsonl
.cargo/: config.toml
.claude/: mcp_config.json  mcp_config.json.backup.20251028_154655  mcp_config.json.backup.20251030_161357  settings.json
.claude/commands/: feature-checklist.md  feature-clarify.md  feature-plan.md  feature-specify.md  feature-tasks.md  feature-validate.md  ics.md  memory-consolidate.md  memory-context.md  memory-export.md  memory-list.md  memory-search.md  memory-store.md  project-constitution.md
.claude/context-snapshots/: context_20251104_152417.txt
.claude/hooks/: on-stop.sh  post-commit.sh  post-memory-store.sh  post-tool-use.sh  pre-compact.sh  pre-destructive.sh  session-end.sh  session-start.sh
.claude/skills/: mnemosyne-context-preservation.md  mnemosyne-mcp-protocol.md  mnemosyne-memory-management.md  mnemosyne-rust-development.md  skill-mnemosyne-discovery.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docs.yml
benches/: branch_isolation_bench.rs  memory_benchmarks.rs
docs/: AGENT_VISIBILITY_FIX.md  BEADS_INTEGRATION.md  BRANCH_ISOLATION.md  BRANCH_ISOLATION_TROUBLESHOOTING.md  BUILD_OPTIMIZATION.md  CODE_REVIEW_CHECKLIST.md  COORDINATION_WORKFLOWS.md  CRASH_RECOVERY.md  DASHBOARD.md  DSPY_INTEGRATION.md  DSPY_INTEGRATION_PLAN.md  DSPY_MIGRATION_GUIDE.md  EVENTS.md  EVENT_HELPERS_GUIDE.md  EVOLUTION.md  FD_LEAK_FIX_TEST_RESULTS.md  FEATURE_BRANCH_STATUS.md  ICONS.md  ICS_ARCHITECTURE.md  ICS_README.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  MIGRATION.md  MULTI_INSTANCE.md  OPERATIONS.md  ORCHESTRATION_PHASE4.md  SESSION_2025_11_07_PROJECT_STATE.md  SESSION_2025_11_08_ORCHESTRATION_COMPLETE.md  SESSION_2025_11_08_PHASE1_IMPLEMENTATION.md  SESSION_2025_11_08_PHASE2_ANALYSIS.md  SESSION_SUMMARY_20251104.md  STORAGE_SCHEMA.md  TELEMETRY.md  TESTING.md  TROUBLESHOOTING.md  TYPES_REFERENCE.md  VALIDATION_RESULTS.md  VALIDATION_SUMMARY.md  VECTOR_SEARCH.md  background-processing-spec.md  (+14 more)
docs/architecture/: PHASE5_PRODUCTION_HARDENING.md  PYTHON_BRIDGE_ARCHITECTURE.md  PYTHON_BRIDGE_SUMMARY.md  PYTHON_BRIDGE_TESTING.md
docs/archive/: IMPLEMENTATION_COMPLETE.md  README.md  TEST_REPORT_LIBSQL_MIGRATION.md  TEST_REVIEW.md  TEST_STATUS.md  TURSO_MIGRATION.md  final-comprehensive-test-results.md  session-2025-10-26-integration-testing.md  sqlite_old_implementation.rs
docs/css/: mnemosyne-theme.css  styles.css
docs/design/: multi-agent-refactoring-summary.md  phase-2-interim-report.md  slash-commands-spec.md  testing-spec.md
docs/development/: CLIPPY_BASELINE.md  COMMIT_CHECKLIST.md  DOCS_AUDIT.md  PRIORITY_MATRIX.md  QUALITY_GATES.md
docs/diagrams-d2/: 01-system-architecture.d2  02-multi-agent-coordination.d2  04-hybrid-search.d2  05-rpc-architecture.d2  06-ics-architecture.d2  07-dashboard-architecture.d2  08-tech-stack.d2  09-data-flow.d2  10-quality-gates.d2  regenerate-diagrams.sh
docs/features/: API_SERVER.md  EVOLUTION_ENHANCEMENTS.md  ICS_KEYBOARD_SHORTCUTS.md  ICS_README.md  PRIVACY.md  RPC.md  semantic-highlighter-test-plan.md
docs/guides/: ICS_INTEGRATION.md  RPC_GETTING_STARTED.md  dashboard.md  llm-reviewer-setup.md  llm-reviewer.md  migration.md  orchestration.md  workflows.md
docs/historical/: DSPY_DEFERRAL_SUMMARY.md  DSPY_PHASE1_STATUS.md  IMPROVEMENTS_SUMMARY.md  (+3 more)
examples/: README.md  semantic_highlighting.rs  specification_workflow.rs
migrations/: MANIFEST.md
scripts/: beads-sync.sh  build-and-install.sh  build-diagrams.sh  build-docs.py  cleanup-processes.sh  rebuild-and-update-install.sh  safe-shutdown.sh  test-server.sh
site/: index.html  whitepaper.html
src/: config.rs  error.rs  health.rs  icons.rs  lib.rs  main.rs  namespace.rs  secrets.rs  types.rs  update.rs  version_check.rs
src/orchestration/agents/: README.md  __init__.py  agent_factory.py  base_agent.py  claude_agent_sdk.py  error_context.py  executor.py  logging_config.py  metrics.py  optimizer.py  orchestrator.py  pyproject.toml  requirements.txt  reviewer.py  validation.py
templates/: .gitkeep  base-shared.html  base.html  index-shared.html  index.html  whitepaper-shared.html  whitepaper.html
tests/: agent_startup_test.rs  artifact_workflow_integration_test.rs  dashboard_agents_integration.rs  distributed_e2e.rs  doctor_worktree_cleanup_test.rs  dspy_bridge_integration_test.rs  dspy_semantic_bridge_test.rs  e2e_libsql_integration.rs  e2e_multi_instance_isolation.rs  e2e_validation.sh  edge_cases_test.rs  embedding_update_test.rs  event_broadcasting_integration.rs  hybrid_search_test.rs  ics_command_integration_test.rs  ics_e2e_tests.rs  ics_full_integration_tests.rs  ics_integration_test.rs  ics_semantic_integration.rs  ics_semantic_tier2_caching.rs  integration_rbac.rs  integration_vector_storage.rs  llm_enrichment_test.rs  llm_prompt_evaluation.rs  mcp_validation_test.rs  memory_evolution_dspy_adapter_test.rs  multi_instance_test.rs  namespace_isolation_test.rs  nerd_font_test.rs  optimizer_dspy_adapter_test.rs  orchestration_bridge_integration.rs  orchestration_e2e.rs  performance_test.rs  phase2_event_integration_test.rs  privacy_compliance_test.rs  python_bridge_e2e.rs  python_weight_persistence_test.rs  repro_issue.rs  reviewer_dspy_adapter_test.rs  reviewer_llm_test.rs  (+5 more)
(+583 files in other folders)
