[package]
name = "mnemosyne"
version = "1.0.0"
edition = "2021"
authors = ["Mnemosyne Contributors"]
description = "Project-aware agentic memory system for Claude Code"
license = "MIT"

[[bin]]
name = "mnemosyne"
path = "src/main.rs"

[lib]
name = "mnemosyne_core"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust binary

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Database
libsql = { version = "0.9", features = ["core", "replication", "sync"] }
libsql_migration = { version = "0.2", features = ["dir"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Embeddings (optional for now, will be implemented later)
# fastembed = "3.0"
# ndarray = "0.15"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"

# Built-in secrets management (no external tools needed)
age = { version = "0.11", features = ["armor", "cli-common"] }
secrecy = "0.10"
directories = "5.0"

# Optional keyring fallback for backward compatibility
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"], optional = true }

# Python integration (PyO3)
pyo3 = { version = "0.22", features = ["extension-module", "abi3"], optional = true }
dirs = "6.0.0"

[features]
default = ["keyring-fallback"]
python = ["pyo3"]
keyring-fallback = ["keyring"]

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"
once_cell = "1.19"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bench]]
name = "memory_benchmarks"
harness = false
