[package]
name = "mnemosyne"
version = "1.0.0"
edition = "2021"
authors = ["Mnemosyne Contributors"]
description = "Project-aware agentic memory system for Claude Code"
license = "MIT"

[[bin]]
name = "mnemosyne"
path = "src/main.rs"

[lib]
name = "mnemosyne_core"
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust binary

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Database
libsql = { version = "0.9", features = ["core", "replication", "sync"] }
libsql_migration = { version = "0.2", features = ["dir"] }

# Vector search (dual storage approach)
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dspy-rs = "0.7.1"  # DSPy framework for systematic prompt optimization

# Local embeddings with ONNX Runtime (auto-downloads binaries)
fastembed = { version = "5.2", features = ["ort-download-binaries"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
regex = "1.10"

# CRDT for ICS collaborative editing
automerge = "0.5"

# Built-in secrets management (no external tools needed)
age = { version = "0.11", features = ["armor", "cli-common"] }
secrecy = "0.10"
directories = "5.0"

# Cryptographic signatures for cross-process authentication
hmac = "0.12"
sha2 = "0.10"

# Optional keyring fallback for backward compatibility
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"], optional = true }

# Python integration (PyO3)
pyo3 = { version = "0.22", features = ["extension-module", "abi3"], optional = true }
dirs = "6.0.0"
nix = { version = "0.30.1", features = ["process", "signal"] }

# Actor system and distributed networking
ractor = "0.13"
ractor_cluster = { version = "0.13", optional = true }
iroh = "0.28"
iroh-net = "0.28"

# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# ICS (Integrated Context Studio) dependencies
# Text editing
ropey = "1.6"
tui-textarea = "0.4"

# Parsing and lexing
tree-sitter = "0.19"
tree-sitter-markdown = "0.7"
logos = "0.13"

# Symbol completion and fuzzy matching
nucleo = "0.5"
fuzzy-matcher = "0.3"

# Error reporting
ariadne = "0.4"
miette = "7.0"

# PTY support
portable-pty = "0.8"
vte = "0.13"

# TUI extensions
tui-logger = "0.11"

[features]
default = ["keyring-fallback"]
python = ["pyo3"]
keyring-fallback = ["keyring"]
distributed = ["ractor_cluster"]

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"
once_cell = "1.19"
serial_test = "3.0"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "branch_isolation_bench"
harness = false
